[package]
name = "toggl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] } 
serde_json = "1.0.81"
anyhow = "1.0"
base64 = "0.13.1"
chrono = "0.4.6"
confy = "0.5.1"
pretty_assertions = "1.3.0"
tabled = "0.14.0"
